// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/users/_id/ltcs-contracts/_contractId/edit.vue should be rendered correctly 1`] = `
<div
  breadcrumbs="[object Object],[object Object],[object Object],[object Object]"
  class="z-page-stub"
  compact="compact"
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <form
    class="v-form"
    data-form=""
    novalidate="novalidate"
  >
    <div>
      <z-user-summary-stub
        user="[object Object]"
      />
      <div
        class="z-form-card-stub"
        title="契約情報"
      >
        <div
          class="z-form-card-stub-slot-actions"
        />
        <!---->
        <z-data-card-item-stub
          icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
          label="事業領域"
          value="介護保険サービス"
        />
        <z-data-card-item-stub
          icon="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
          label="契約状態"
        >
          <span>
            本契約 ⇒
          </span>
          <span>
            契約終了
          </span>
        </z-data-card-item-stub>
        <z-data-card-item-stub
          icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
          label="事業所"
          value="新宿"
        />
        <z-data-card-item-stub
          icon="M19,19H5V8H19M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M16.53,11.06L15.47,10L10.59,14.88L8.47,12.76L7.41,13.82L10.59,17L16.53,11.06Z"
          label="契約日"
        >
          <time
            datetime="1973-12-17"
          >
            昭和48年12月17日
          </time>
        </z-data-card-item-stub>
        <z-form-card-item-set-stub
          icon="M19,19H5V8H19M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M9.31,17L11.75,14.56L14.19,17L15.25,15.94L12.81,13.5L15.25,11.06L14.19,10L11.75,12.44L9.31,10L8.25,11.06L10.69,13.5L8.25,15.94L9.31,17Z"
          label=""
        >
          <div
            class="root"
            data-terminated-on=""
            data-z-form-card-item=""
          >
            <div
              class="z-date-field"
            >
              <div
                class="v-input v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                    style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: 0px;"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-text-field__slot"
                    >
                      <label
                        class="v-label theme--light"
                        style="left: 0px; position: absolute;"
                      >
                        解約日 *
                      </label>
                      <input
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <transition-group-stub
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <v-dialog-stub
                closedelay="0"
                contentclass=""
                data-z-date-field-dialog=""
                opendelay="0"
                origin="center center"
                retainfocus="true"
                transition="dialog-transition"
                width="290px"
              >
                <v-date-picker-stub
                  data-z-date-field-picker=""
                  dayformat="[Function]"
                  eventcolor="warning"
                  firstdayofweek="1"
                  headerdateformat="[Function]"
                  locale="ja-JP"
                  localefirstdayofyear="0"
                  max="2028-05-17"
                  min="1920-01-01"
                  nexticon="$next"
                  nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
                  nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
                  notitle="true"
                  previcon="$prev"
                  prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
                  prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
                  selecteditemstext="$vuetify.datePicker.itemsSelected"
                  showcurrent="true"
                  titledateformat="[Function]"
                  type="date"
                  width="290"
                  yearformat="[Function]"
                >
                  <v-spacer-stub
                    tag="div"
                  />
                  <a
                    class="v-btn-stub"
                    color="primary"
                    data-z-date-field-button-clear=""
                    text=""
                  >
                    クリア
                  </a>
                  <a
                    class="v-btn-stub"
                    color="primary"
                    data-z-date-field-button-cancel=""
                    text=""
                  >
                    キャンセル
                  </a>
                </v-date-picker-stub>
              </v-dialog-stub>
            </div>
          </div>
          <div
            class="root"
            data-expired-reason=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
            >
              <div
                class="v-input__control"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="v-input__slot"
                  role="button"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-select__slot"
                  >
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      解約理由 *
                    </label>
                    <div
                      class="v-select__selections"
                    >
                      <input
                        aria-readonly="false"
                        autocomplete="off"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate mdi mdi-menu-down theme--light"
                        />
                      </div>
                    </div>
                    <input
                      type="hidden"
                    />
                  </div>
                  <div
                    class="v-menu"
                  >
                    <!---->
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M21,6V8H3V6H21M3,18H12V16H3V18M3,13H21V11H3V13Z"
          label=""
        >
          <div
            class="root"
            data-note=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-textarea v-textarea--auto-grow v-textarea--no-resize v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label v-label--active theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      備考
                    </label>
                    <textarea
                      rows="3"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                  <div
                    class="v-counter theme--light"
                  >
                    246 / 255
                  </div>
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <div
          class="z-form-card-stub-slot-header"
        />
      </div>
      <div
        class="z-form-card-stub"
        title="介護保険サービス"
      >
        <div
          class="z-form-card-stub-slot-actions"
        />
        <z-form-card-item-set-stub
          icon="M19,19H5V8H19M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M16.53,11.06L15.47,10L10.59,14.88L8.47,12.76L7.41,13.82L10.59,17L16.53,11.06Z"
          label=""
        >
          <div
            class="root"
            data-ltcs-period-start=""
            data-z-form-card-item=""
          >
            <div
              class="z-date-field"
            >
              <div
                class="v-input v-input--is-label-active v-input--is-dirty v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                    style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: 0px;"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-text-field__slot"
                    >
                      <label
                        class="v-label v-label--active theme--light"
                        style="left: 0px; position: absolute;"
                      >
                        初回サービス提供日
                      </label>
                      <input
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <transition-group-stub
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <v-dialog-stub
                closedelay="0"
                contentclass=""
                data-z-date-field-dialog=""
                opendelay="0"
                origin="center center"
                retainfocus="true"
                transition="dialog-transition"
                width="290px"
              >
                <v-date-picker-stub
                  data-z-date-field-picker=""
                  dayformat="[Function]"
                  eventcolor="warning"
                  firstdayofweek="1"
                  headerdateformat="[Function]"
                  locale="ja-JP"
                  localefirstdayofyear="0"
                  max="2028-05-17"
                  min="1920-01-01"
                  nexticon="$next"
                  nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
                  nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
                  notitle="true"
                  previcon="$prev"
                  prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
                  prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
                  selecteditemstext="$vuetify.datePicker.itemsSelected"
                  showcurrent="true"
                  titledateformat="[Function]"
                  type="date"
                  value="1974-02-26"
                  width="290"
                  yearformat="[Function]"
                >
                  <v-spacer-stub
                    tag="div"
                  />
                  <a
                    class="v-btn-stub"
                    color="primary"
                    data-z-date-field-button-clear=""
                    text=""
                  >
                    クリア
                  </a>
                  <a
                    class="v-btn-stub"
                    color="primary"
                    data-z-date-field-button-cancel=""
                    text=""
                  >
                    キャンセル
                  </a>
                </v-date-picker-stub>
              </v-dialog-stub>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M19,19H5V8H19M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M9.31,17L11.75,14.56L14.19,17L15.25,15.94L12.81,13.5L15.25,11.06L14.19,10L11.75,12.44L9.31,10L8.25,11.06L10.69,13.5L8.25,15.94L9.31,17Z"
          label=""
        >
          <div
            class="root"
            data-ltcs-period-end=""
            data-z-form-card-item=""
          >
            <div
              class="z-date-field"
            >
              <div
                class="v-input v-input--is-label-active v-input--is-dirty v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                    style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: 0px;"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-text-field__slot"
                    >
                      <label
                        class="v-label v-label--active theme--light"
                        style="left: 0px; position: absolute;"
                      >
                        最終サービス提供日
                      </label>
                      <input
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <transition-group-stub
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <v-dialog-stub
                closedelay="0"
                contentclass=""
                data-z-date-field-dialog=""
                opendelay="0"
                origin="center center"
                retainfocus="true"
                transition="dialog-transition"
                width="290px"
              >
                <v-date-picker-stub
                  data-z-date-field-picker=""
                  dayformat="[Function]"
                  eventcolor="warning"
                  firstdayofweek="1"
                  headerdateformat="[Function]"
                  locale="ja-JP"
                  localefirstdayofyear="0"
                  max="2028-05-17"
                  min="1920-01-01"
                  nexticon="$next"
                  nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
                  nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
                  notitle="true"
                  previcon="$prev"
                  prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
                  prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
                  selecteditemstext="$vuetify.datePicker.itemsSelected"
                  showcurrent="true"
                  titledateformat="[Function]"
                  type="date"
                  value="1976-05-19"
                  width="290"
                  yearformat="[Function]"
                >
                  <v-spacer-stub
                    tag="div"
                  />
                  <a
                    class="v-btn-stub"
                    color="primary"
                    data-z-date-field-button-clear=""
                    text=""
                  >
                    クリア
                  </a>
                  <a
                    class="v-btn-stub"
                    color="primary"
                    data-z-date-field-button-cancel=""
                    text=""
                  >
                    キャンセル
                  </a>
                </v-date-picker-stub>
              </v-dialog-stub>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <div
          class="z-form-card-stub-slot-header"
        />
      </div>
      <z-form-action-button-stub
        icon="M14,13V17H10V13H7L12,8L17,13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
        text="保存"
      />
    </div>
  </form>
</div>
`;

exports[`pages/users/_id/ltcs-contracts/_contractId/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "terminatedOn") 1`] = `
<div
  class="root"
  data-terminated-on=""
  data-z-form-card-item=""
>
  <div
    class="z-date-field"
  >
    <div
      class="v-input v-input--has-state v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
          style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
        >
          <fieldset
            aria-hidden="true"
          >
            <legend
              style="width: 0px;"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </legend>
          </fieldset>
          <div
            class="v-text-field__slot"
          >
            <label
              class="v-label theme--light error--text"
              style="left: 0px; position: absolute;"
            >
              解約日 *
            </label>
            <input
              readonly="readonly"
              type="text"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light error--text"
            role="alert"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            >
              <div
                class="v-messages__message"
              >
                解約日を入力してください。
              </div>
            </transition-group-stub>
          </div>
        </div>
      </div>
    </div>
    <v-dialog-stub
      closedelay="0"
      contentclass=""
      data-z-date-field-dialog=""
      opendelay="0"
      origin="center center"
      retainfocus="true"
      transition="dialog-transition"
      width="290px"
    >
      <v-date-picker-stub
        data-z-date-field-picker=""
        dayformat="[Function]"
        eventcolor="warning"
        firstdayofweek="1"
        headerdateformat="[Function]"
        locale="ja-JP"
        localefirstdayofyear="0"
        max="2028-05-17"
        min="1920-01-01"
        nexticon="$next"
        nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
        nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
        notitle="true"
        previcon="$prev"
        prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
        prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
        selecteditemstext="$vuetify.datePicker.itemsSelected"
        showcurrent="true"
        titledateformat="[Function]"
        type="date"
        width="290"
        yearformat="[Function]"
      >
        <v-spacer-stub
          tag="div"
        />
        <a
          class="v-btn-stub"
          color="primary"
          data-z-date-field-button-clear=""
          text=""
        >
          クリア
        </a>
        <a
          class="v-btn-stub"
          color="primary"
          data-z-date-field-button-cancel=""
          text=""
        >
          キャンセル
        </a>
      </v-date-picker-stub>
    </v-dialog-stub>
  </div>
</div>
`;
